# OIST-ACM-AOC-CodeCrafters

./: .env.example  README.md  example_cves.json  pyproject.toml
scripts/: smoke_test.py
src/: __init__.py  cli.py  cve_fetcher.py  cve_locator.py  dependency_scanner.py  dynamic_harness.py  graph_builder.py  hypothesis.py  nodes.py  pipeline.py  schemas.py
tests/: test_dynamic_harness.py  test_graph_builder.py  test_pipeline_integration.py
tests/fixtures/dummy_target_app/: pyproject.toml
tests/fixtures/dummy_target_app/app/: routes.py
tests/fixtures/dummy_target_app/app/services/: upload.py
