[project]
name = "dummy-target-app"
version = "0.1.0"
description = "Fixture app with intentionally vulnerable dependencies, used to exercise graph_builder + dynamic_harness in vulnerability-scanning tests."
requires-python = ">=3.9"
dependencies = [
    # Flask 0.12.2 -- old release predating several Werkzeug/Flask hardening fixes
    "flask==0.12.2",
    # Werkzeug <2.2.3 -- CVE-2023-25577 (multipart form data resource exhaustion / debugger RCE)
    "werkzeug==2.0.3",
    # Jinja2 2.10 -- CVE-2019-10906 (sandbox escape via str.format)
    "jinja2==2.10",
    # requests 2.6.0 -- CVE-2015-2296 / netrc credential leak issues
    "requests==2.6.0",
    # urllib3 1.24.1 -- CVE-2019-11324 / CVE-2019-11236 (CRLF injection, cert verification)
    "urllib3==1.24.1",
    # PyYAML 5.1 -- CVE-2020-14343 (arbitrary code execution via yaml.load / full_load)
    "pyyaml==5.1",
    # Pillow 8.1.0 -- multiple CVEs (CVE-2021-25287, CVE-2021-25288, buffer overflows)
    "pillow==8.1.0",
    # cryptography 2.3 -- CVE-2018-10903 (finite field DH implementation flaw)
    "cryptography==2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]